@@ -33,7 +33,7 @@ package com.jme3.gde.android;
 
 import com.jme3.gde.core.errorreport.ExceptionUtils;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import org.netbeans.api.autoupdate.UpdateUnitProvider;
 import org.netbeans.api.autoupdate.UpdateUnitProviderFactory;
 import org.openide.modules.ModuleInstall;
@@ -55,9 +55,9 @@ public class Installer extends ModuleInstall {
             if (implVers != null) {
                 try {
                     UpdateUnitProvider updateUnitProvider = UpdateUnitProviderFactory.getDefault()
-                                .create("NBANDROID", "NBANDROID Update Center", new URL(
+                                .create("NBANDROID", "NBANDROID Update Center", URI.create(
                                         String.format("http://server.arsi.sk:8080/updates/%s-updates.xml", implVers)
-                                ));
+                                ).toURL());
                     updateUnitProvider.setEnable(true);
                 } catch (MalformedURLException ex) {
                     ExceptionUtils.caughtException(ex, "Note: This could be a problem related to your internet connection/firewall etc.");
