@@ -39,7 +39,7 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.net.HttpURLConnection;
 import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
 import java.util.concurrent.Callable;
 import java.util.logging.Level;
 import java.util.logging.Logger;
@@ -91,21 +91,20 @@ public class JreDownloader {
     private static void attemptDownload(String newUrl, File dest, int retry) {
         logger.log(Level.INFO, "Attempt to download JRE from {0}", newUrl);
         try {
-            HttpURLConnection connection = (HttpURLConnection) new URL(newUrl).openConnection();
+            HttpURLConnection connection = (HttpURLConnection) URI.create(newUrl).toURL().openConnection();
             connection.setRequestProperty("Cookie", "gpw_e24=http%3A%2F%2Fwww.oracle.com%2F; oraclelicense=accept-securebackup-cookie");
             connection.setAllowUserInteraction(false);
             connection.setInstanceFollowRedirects(true);
             connection.connect();
             int status = connection.getResponseCode();
-            if (status == HttpURLConnection.HTTP_OK) {
-                downloadFile(connection, dest, retry);
-            } else if (status == HttpURLConnection.HTTP_MOVED_TEMP || status == HttpURLConnection.HTTP_MOVED_PERM || status == HttpURLConnection.HTTP_SEE_OTHER) {
-                handleRedirect(connection, dest, retry);
-            } else if (status == HttpURLConnection.HTTP_NOT_FOUND) {
-                MessageUtil.error("Download of JRE failed because it was not found.\nMaybe you are running an old Version which isn't available for download anymore?");
-                MessageUtil.error("Go to download.oracle.com and alter the version field in the Project Properties accordingly.\nIf the Problem persists, download the .tar.gz files manually to\n" + dest.getAbsolutePath());
-            } else {
-                logger.log(Level.WARNING, "Download of JRE from {0} failed. HTTP Status Code {1} ", new Object[]{newUrl, status});
+            switch (status) {
+                case HttpURLConnection.HTTP_OK -> downloadFile(connection, dest, retry);
+                case HttpURLConnection.HTTP_MOVED_TEMP, HttpURLConnection.HTTP_MOVED_PERM, HttpURLConnection.HTTP_SEE_OTHER -> handleRedirect(connection, dest, retry);
+                case HttpURLConnection.HTTP_NOT_FOUND -> {
+                    MessageUtil.error("Download of JRE failed because it was not found.\nMaybe you are running an old Version which isn't available for download anymore?");
+                    MessageUtil.error("Go to download.oracle.com and alter the version field in the Project Properties accordingly.\nIf the Problem persists, download the .tar.gz files manually to\n" + dest.getAbsolutePath());
+                }
+                default -> logger.log(Level.WARNING, "Download of JRE from {0} failed. HTTP Status Code {1} ", new Object[]{newUrl, status});
             }
         } catch (MalformedURLException ex) {
             logger.log(Level.SEVERE, "{0}", ex);
